--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "better-auth": "^1.3.28",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "inngest": "^3.44.3",
     "lucide-react": "^0.546.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
