--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "@aws-sdk/client-s3": "^3.914.0",
     "@aws-sdk/s3-request-presigner": "^3.914.0",
     "@daveyplate/better-auth-ui": "^3.2.6",
+    "@polar-sh/better-auth": "^1.1.11",
+    "@polar-sh/sdk": "^0.38.1",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
